feat!: Polarion 2606 support
